--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>RUN BUDDY</h1>
-    <h2>What We Do</h2>
+    <h2>What We Do
+        <h3></h3>
+    </h2>
 </body>
 </html>
