--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>RUN BUDDY</h1>
-    <h2>What We Do
-        <h3></h3>
-    </h2>
+   What We Do What You Do Your Trainers Reach Out
+ 
+    
 </body>
 </html>
