--- a/index.html
+++ b/index.html
@@ -6,9 +6,41 @@
     <title>RUN BUDDY</title>
 </head>
 <body>
-    <h1>RUN BUDDY</h1>
-   What We Do What You Do Your Trainers Reach Out
- 
+    <header>
+        <h1>RUN BUDDY</h1>
+        <nav></nav>
+    </header>
+
+    <!-- Hero -->
+    <section>
+
+    </section>
+
+    <!--what we do section-->
+    <section id="what-we-do">
+        <h1>What We Do</h1>
+    </section>
     
+    <!--what you do section-->
+    <section id="what-you-do">
+        <h1>What You Do</h1>
+    </section>
+
+    <!--meer the trainer section-->
+    <section id="meet-the-trainers">
+        <h1>Meet the Trainers</h1>
+    </section>
+
+    <!--reach out section-->
+    <section id="reach-out">
+        <h1>Reach Out</h1>
+    </section>
+
+    <!--footer-->
+    <footer>
+         <h2>❤️ Made with love by Run Buddy.</h2>
+    </footer>
+
+
 </body>
 </html>
