--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <title>RUN BUDDY</title>
 </head>
 <body>
+    <!-- navigation -->
     <header>
         <h1>RUN BUDDY</h1>
-        <nav></nav>
+        What We Do What You Do Your Trainer Reach Out
+        <nav>
+        <!-- Unordered list element -->
+        <ul>
+            <!-- List item element-->
+            <li>
+                <!-- Anchor element -->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#what-you-do">What You Do</a>   
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+        </nav>
     </header>
 
     <!-- Hero -->
@@ -20,7 +40,7 @@
     <section id="what-we-do">
         <h1>What We Do</h1>
     </section>
-    
+     
     <!--what you do section-->
     <section id="what-you-do">
         <h1>What You Do</h1>
