--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
     <!-- navigation -->
     <header>
-        <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Trainer Reach Out
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
         <nav>
         <!-- Unordered list element -->
         <ul>
             <!-- List item element-->
             <li>
                 <!-- Anchor element -->
-                <a href="#what-we-do">What We Do</a>
+                <a href="#what-we-do">What Weee Do</a>
             </li>
             <li>
                 <a href="#what-you-do">What You Do</a>   
